# hr-tddschn

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  hr.py  pyproject.toml
hr_tddschn/: __init__.py  hr.py  utils.py
